# c-sdk

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  configure  test-env.sh  vcpkg.json
.github/workflows/: ci.yml  version-check.yml
CUnit/: Makefile.in  aclocal.m4  config.h.in  configure  mkinstalldirs
CUnit/CUnit/: Makefile.in
CUnit/CUnit/Headers/: Makefile.in
CUnit/CUnit/Sources/: Makefile.in
CUnit/CUnit/Sources/Automated/: Makefile.in
CUnit/CUnit/Sources/Basic/: Makefile.in
CUnit/CUnit/Sources/Console/: Makefile.in
CUnit/CUnit/Sources/Curses/: Makefile.in
CUnit/CUnit/Sources/Framework/: Makefile.in
CUnit/CUnit/Sources/Test/: Makefile.in
CUnit/Examples/: Makefile.in
CUnit/Examples/AutomatedTest/: Makefile.in
CUnit/Examples/BasicTest/: Makefile.in
CUnit/Examples/ConsoleTest/: Makefile.in
CUnit/Examples/CursesTest/: Makefile.in
CUnit/Man/: Makefile.in
CUnit/Man/man3/: Makefile.in
CUnit/Share/: Makefile.in
CUnit/doc/: Makefile.in  fdl.html
CUnit/doc/headers/: Makefile.in
crc32/: crc32.c  crc32.h
demo/: CMakeLists.txt  cdn_bandwidth.c  cdn_flux.c  cdn_loglist.c  cdn_prefetch.c  cdn_refresh.c  demo.c  gen_download_url_with_deadline.c  put_file.c  put_file_abortable.c  put_stream.c
docs/: README.gist.md  README.md
docs/gist/: Makefile  client.c  server.c
examples/: CMakeLists.txt  Makefile  cdn_create_timestamp_url.c  cdn_get_bandwidth_data.c  cdn_get_flux_data.c  cdn_get_log_list.c  cdn_prefetch_urls.c  cdn_refresh_dirs.c  cdn_refresh_urls.c  debug.h  fop_video_avthumb  fop_video_avthumb.c  rs_accesskey_demo.c  rs_batch_change_mime.c  rs_batch_change_type.c  rs_batch_copy.c  rs_batch_delete.c  rs_batch_delete_after_days.c  rs_batch_move.c  rs_batch_stat.c  rs_buckets.c  rs_change_mime.c  rs_change_status.c  rs_change_type.c  rs_copy.c  rs_create_bucket.c  rs_delete.c  rs_delete_after_days.c  rs_demo.c  rs_fetch  rs_fetch.c  rs_move.c  rs_prefetch  rs_prefetch.c  rs_stat.c  rsf_list_bucket.c  rsf_list_files  rsf_list_files.c  test-env.sh  up_chunk_upload.c  (+5 more)
examples/auth_passwd/: Makefile  rs_demo.c
examples/auth_uptoken/: Makefile  big_file.txt  rs_demo.c
examples/resumable_put/: Makefile  big_file.txt  rs_demo.c  up_demo.c  up_demo_resumable.c
examples/unit_test/: Makefile  README.md  main.c  mkbucket.c  mogrifyurl.c  qbox_test  qbox_test.c  qbox_test.h  run_test.c  saveas.c  t_img_exif.c  t_img_info.c  t_img_mogrifyurl.c  t_img_saveas.c  t_img_viewurl.c  t_rs_mkbucket.c
examples/watermark/: Makefile  wmdemo  wmdemo.c
gtests/: CMakeLists.txt  auth_test.cc  base_io_test.cc  crypto_test.cc  equal.c  fmt_test.cc  fop_test.cc  io_put_test.cc  multipart_test.cc  qiniu_test.cc  recorder_key_test.cc  recorder_test.cc  region_test.cc  resumable_io_test.cc  rfc3339_test.cc  rs_ops_test.cc  rsf_test.cc  seq.c  test.h
qbox/: Makefile  auth_policy.c  auth_policy.h  base.c  base.h  base_io.c  conf.c  conf.h  image.c  image.h  io.c  io.h  oauth2.c  oauth2.h  oauth2_digest.c  oauth2_digest.h  oauth2_passwd.c  oauth2_passwd.h  oauth2_uptoken.c  oauth2_uptoken.h  rs.c  rs.h  rs_token.c  rs_up.c  rscli.c  rscli.h  up.c  up.h  wm.c  wm.h
qiniu/: auth_mac.c  base.c  base.h  base_io.c  cdn.c  cdn.h  code.c  conf.c  conf.h  crypto.c  emu_posix.c  emu_posix.h  encoding_in_windows.c  encoding_in_windows.h  fop.c  fop.h  http.c  http.h  io.c  io.h  macro.h  multipart_upload.c  multipart_upload.h  oauth2.c  oauth2.h  oauth2_digest.c  qetag.c  qetag.h  qiniu.bat  qiniu.def  qiniu.dsp  qiniu.sln  qiniu.vcxproj  qiniu.vcxproj.filters  reader.c  reader.h  recorder.c  recorder.h  recorder_key.c  recorder_key.h  (+15 more)
qiniu/private/: code.h  crypto.h  region.h
test/: Makefile  test.c
tests/: Makefile  WinMain.c  equal.c  seq.c  test-env.sh  test.c  test.h  test_base_io.c  test_fmt.c  test_fop.c  test_io_put.c  test_multipart.c  test_recorder.c  test_resumable_io.c  test_rs_ops.c  tests.dsp
unit-test/: CUnit-Run.xsl  Makefile  Makefile2.txt  ReadMe.txt  _unit_test_readme.txt  auth_policy.gcda  auth_policy.gcno  base.gcda  base.gcno  base_io.gcda  base_io.gcno  cJSON.gcda  cJSON.gcno  c_unit_test_main.c  c_unit_test_main.gcda  c_unit_test_main.gcno  c_unit_test_main.h  image.gcda  image.gcno  oauth2.gcda  oauth2.gcno  oauth2_digest.gcda  oauth2_digest.gcno  oauth2_passwd.gcda  oauth2_passwd.gcno  oauth2_uptoken.gcda  oauth2_uptoken.gcno  rs.gcda  rs.gcno  rs_app.info  rs_up.gcda  rs_up.gcno  rscli.gcda  rscli.gcno  suites_auth_policy.c  suites_base.c  suites_image.c  suites_io.c  suites_oauth2.c  suites_oauth2_passwd.c  (+41 more)
unit-test/result/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
unit-test/result/c-sdk-2.2.0/b64/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  urlsafe_b64.c.func-sort-c.html  urlsafe_b64.c.func.html  urlsafe_b64.c.gcov.html
unit-test/result/c-sdk-2.2.0/cJSON/: cJSON.c.func-sort-c.html  cJSON.c.func.html  cJSON.c.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
unit-test/result/c-sdk-2.2.0/qbox/: auth_policy.c.func-sort-c.html  auth_policy.c.func.html  auth_policy.c.gcov.html  base.c.func-sort-c.html  base.c.func.html  base.c.gcov.html  base_io.c.func-sort-c.html  base_io.c.func.html  base_io.c.gcov.html  image.c.func-sort-c.html  image.c.func.html  image.c.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  oauth2.c.func-sort-c.html  oauth2.c.func.html  oauth2.c.gcov.html  oauth2_digest.c.func-sort-c.html  oauth2_digest.c.func.html  oauth2_digest.c.gcov.html  oauth2_passwd.c.func-sort-c.html  oauth2_passwd.c.func.html  oauth2_passwd.c.gcov.html  oauth2_uptoken.c.func-sort-c.html  oauth2_uptoken.c.func.html  oauth2_uptoken.c.gcov.html  rs.c.func-sort-c.html  rs.c.func.html  (+10 more)
unit-test/test-result/: CUnit-List.dtd  CUnit-List.xsl  CUnit-Run.dtd  c-sdk-unit-test-Listing.xml  c-sdk-unit-test-Results.xml
unittest/: Makefile  suites_base.c  suites_http.c  suites_io.c  suites_resumable_io.c  suites_rs.c  test.c  test.h  test_file_128b.txt  test_file_256k.txt  test_file_64b.txt  test_file_output.txt
(+41 files in other folders)
